<resources>
    <string name="app_name">Tržnica</string>
    <string name="title_activity_main">Ponuda</string>
    <string name="prompt_name">Ime</string>
    <string name="prompt_surname">Prezime</string>
    <string name="prompt_town">Grad</string>
    <string name="prompt_address">Adresa</string>
    <string name="prompt_tel">Mobitel</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Lozinka</string>
    <string name="prompt_password2">Potvrdi lozinku</string>
    <string name="action_sign_in">Prijava</string>
    <string name="action_register">Registracija</string>
    <string name="action_new_user">Novi korisnik? Registracija</string>
    <string name="welcome">"Dobrodošli "</string>
    <string name="invalid_username">Neispravno korisničko ime!</string>
    <string name="invalid_password">Lozinka mora sadržavati više od 5 znakova!</string>
    <string name="login_failed">"Neuspijela prijava!"</string>
    <string name="login_failed_pwd">"Neispravna lozinka!"</string>
    <string name="login_failed_usn">"Neispravan email!"</string>
    <string name="register_failed">Neuspijela registracija!</string>
    <string name="register_success">Uspješno ste registrirani!</string>
    <string name="prompt_naziv">Naziv</string>
    <string name="prompt_cijena">Cijena</string>
    <string name="prompt_opis">Opis</string>
    <string name="kuna">" kn"</string>
    <string name="del">Obriši proizvod</string>
    <string name="register_exist">Korisnik je već registriran!</string>
    <string name="no_data">Nema proizvoda</string>
    <string name="korisnik">Korisnik</string>
    <string name="save">Spremi</string>
    <string name="cancel">Odustani</string>
    <string name="update_success">Korisnički podaci su spremljeni!</string>
    <string name="home_title">Registriraj svoje poljoprivredno gospodarstvo i kreni s prodajom</string>
    <string name="izmjena">Izmjena</string>
    <string name="novi_proizvod">Novi proizvod</string>
    <string name="ok">OK</string>
    <string name="del_message">Želite obrisati ovaj proizvod?</string>
    <string name="del_success_msg">Proizvod je obrisan!</string>
    <string name="del_fail_msg">Greška kod brisanja proizvoda!</string>
    <string name="add_success_msg">Podaci o proizvodu su spremljeni</string>
    <string name="add_fail_msg">Došlo je do greške kod spremanja podataka!</string>
    <string name="slika_error_msg">Problem kod kreiranja slike!</string>
    <string name="action_gallery">Galerija</string>
    <string name="action_photo">Kamera</string>
    <string name="perm_write">Potrebna je dozvola za korištenje galerije!</string>
    <string name="btn_validate">Potvrdi</string>
    <string name="msg_validate">Kontrolni kod poslan je SMS porukom na ovaj broj</string>
    <string name="prompt_kod">Kod</string>
    <string name="phone_error">Provjerite broj mobitela i pokušajte ponovno!</string>
    <string name="code_error">Unesen je neispravan kontrolni kod!</string>
    <string name="btn_nazovi">Nazovi</string>
    <string name="btn_posaljimail">Pošalji email</string>
    <string name="search">Pretraga</string>

</resources>