<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.UserActivity">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_height="@dimen/spacing_xxlarge"
        android:layout_marginTop="@dimen/spacing_xmlarge"
        android:textColorHint="@color/grey_20"
        app:boxStrokeColor="@color/grey_80">


    <EditText
        android:id="@+id/ime"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/prompt_name"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:padding="0dp"
    />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_height="@dimen/spacing_xxlarge"
        android:layout_marginTop="@dimen/spacing_middle"
        android:textColorHint="@color/grey_20"
        app:boxStrokeColor="@color/grey_80">
    <EditText
        android:id="@+id/prezime"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/prompt_surname"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:padding="0dp"

        />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_height="@dimen/spacing_xxlarge"
        android:layout_marginTop="@dimen/spacing_middle"
        android:textColorHint="@color/grey_20"
        app:boxStrokeColor="@color/grey_80">
    <EditText
        android:id="@+id/grad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/prompt_town"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:padding="0dp"
    />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_height="@dimen/spacing_xxlarge"
        android:layout_marginTop="@dimen/spacing_middle"
        android:textColorHint="@color/grey_20"
        app:boxStrokeColor="@color/grey_80">
    <EditText
        android:id="@+id/adresa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/prompt_address"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:padding="0dp"
    />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_height="@dimen/spacing_xxlarge"
        android:layout_marginTop="@dimen/spacing_middle"
        android:textColorHint="@color/grey_20"
        app:boxStrokeColor="@color/grey_80">
    <EditText
        android:id="@+id/tel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/prompt_tel"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:padding="0dp"
    />
    </com.google.android.material.textfield.TextInputLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginStart="48dp"
    android:layout_marginTop="46dp"
    android:layout_marginEnd="48dp"
    android:layout_marginBottom="0dp"
    android:layout_gravity="center"
    android:gravity="center">

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:enabled="false"
        android:text="@string/save"
         />

</LinearLayout>
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="84dp"
        android:visibility="gone"
     />
</LinearLayout>