<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing_xlarge">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linear2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumber1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PROVJERA"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textStyle="bold" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:gravity="center"
            android:text="@string/msg_validate"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_mxlarge"
        android:layout_marginBottom="175dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"

            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/grey_60"
            android:textStyle="bold">

            <requestFocus />

        </com.google.android.material.textfield.TextInputEditText>


        <ImageButton
            android:layout_width="@dimen/spacing_xmlarge"
            android:layout_height="@dimen/spacing_xmlarge"
            android:background="@android:color/transparent"
            android:tint="@color/green_400"
            app:srcCompat="@drawable/ic_check_circle" />

    </LinearLayout>


    <!-- <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/spacing_mxlarge"
        android:text="@string/msg_validate"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber1"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumber1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber1"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber1"
        app:layout_constraintTop_toTopOf="parent" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextNumber1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="150dp"
        android:layout_height="@dimen/spacing_xxlarge"
        android:layout_marginTop="@dimen/spacing_mxlarge"
        android:ems="10"
        android:textColorHint="@color/grey_20"
        app:boxStrokeColor="@color/grey_80"
        app:layout_constraintBottom_toTopOf="@+id/countdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear2">


        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_kod"
            android:inputType="number"
            android:padding="0dp"
            android:textAlignment="center" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_mxlarge"
        android:gravity="center"
        android:text="02:00"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/grey_60"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber1" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_mxlarge"
        android:background="@drawable/btn_rounded_primary"
        android:text="@string/btn_validate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countdown" />


</androidx.constraintlayout.widget.ConstraintLayout>